--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 body {
   font-size: 1.6rem;
   font-family: "Work Sans", sans-serif;
-  padding-bottom: 21.6rem;
+  padding-bottom: 8rem;
 }
 
 /* Container */
@@ -340,6 +340,66 @@ header nav .nav_right ul a:hover::before {
 
 /* Facts Section End */
 
+/* Bonus Section : call to action start*/
+
+.cta{
+  width: 100%;
+  background-image:url('../images/ctaShape.svg');
+  position: relative;
+  z-index: 20; 
+  margin-top: 13rem;
+  padding: 16rem 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.cta::before{
+  content:'';
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top:0;
+  left:0;
+  background-color: #000;
+  opacity: .7;
+  z-index: -1;
+}
+.cta_content{
+  color: #fff;
+  z-index: 999;
+  text-align: center;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
+.cta_content h1{
+  font-size: 10vw;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+.cta_content h1 span{
+  color: var(--color-main);
+}
+.cta_content p{
+  line-height: 5rem;
+  font-weight: 500;
+  font-size: 2.5rem;
+}
+.cta_content button{
+  border: 3px solid var(--color-secondary);
+  padding: 2rem 2.5rem;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 2rem;
+  margin-top: 3rem;
+  transition: all .4s;
+}
+.cta_content button:hover{
+  background-color: var(--color-secondary);
+  color:var(--text-Primary);
+}
+/* Bonus Section : call to action end*/
+
 /* Section : Sponsors Start */
 
 .sponsors {
@@ -384,7 +444,7 @@ footer {
 footer .container {
   background-color: var(--color-secondary);
   border-radius: 0.8rem;
-  padding: 4rem 0;
+  padding: 4rem 1rem;
   text-align: center;
 }
 footer .container p {
