--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,12 +11,17 @@
   header nav h2{
     color:var(--color-main);
   }
+  header nav .nav_right{
+    text-align: center;
+  }
   header nav .nav_right ul{
     gap: 2rem;
+    flex-direction: column;
+    width: 100%;
+
   }
 
   .hero{
-    flex-direction: column-reverse;
     margin-top: 5rem;
   }
   .hero .heroText h1 {
