--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,36 +1,45 @@
+/* Small Devices */
 @media only screen and (max-width: 576px) {
   .container {
     width: 90%;
   }
+
+  /* Header styles start */
+
   header nav {
     height: auto;
     padding: 1rem 0;
     gap: 1rem;
     flex-direction: column;
   }
-  header nav h2{
-    color:var(--color-main);
+  header nav h2 {
+    color: var(--color-main);
   }
-  header nav .nav_right{
+  header nav .nav_right {
     text-align: center;
   }
-  header nav .nav_right ul{
+  header nav .nav_right ul {
     gap: 2rem;
     flex-direction: column;
     width: 100%;
-
   }
 
-  .hero{
+  /* Header styles end */
+
+  /* hero start */
+  .hero {
     margin-top: 5rem;
   }
   .hero .heroText h1 {
     width: 100%;
     font-size: 5rem;
   }
-  .hero .heroText p{
+  .hero .heroText p {
     width: 100%;
   }
+  /* hero end */
+
+
   /* Section : QuickList Start */
 
   .QuickList {
@@ -38,9 +47,9 @@
   }
   .QuickList_left {
     width: 100%;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
-  .QuickList_left img{
+  .QuickList_left img {
     width: 100%;
   }
   .QuickList_right {
@@ -54,6 +63,7 @@
 
   /* Section : QuickList end */
 
+  /* Section : Features start */
   .features {
     flex-direction: column;
   }
@@ -77,7 +87,11 @@
     grid-gap: 4rem;
   }
 
-  .cta{
+  /* Section : Features end */
+
+
+  /* Bonus section : Cta */
+  .cta {
     padding: 8rem 0;
   }
 
@@ -85,27 +99,34 @@
     gap: 2rem;
   }
 
-  footer .container p{
+  footer .container p {
     line-height: 3rem;
   }
+
 }
+
+/* Medium Devices */
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
   .container {
     width: 90%;
   }
+  /* header start */
   header nav {
     flex-direction: column;
     height: 10rem;
     padding: 1rem 0;
     gap: 1.5rem;
   }
-  .hero{
+  .hero {
     flex-direction: column-reverse;
   }
   .hero .heroText h1 {
     width: 100%;
   }
+
+  /* Header end */
+
   /* Section : QuickList Start */
 
   .QuickList {
@@ -117,7 +138,6 @@
   .QuickList_right {
     width: 100%;
     text-align: center;
-
   }
 
   .QuickList_right .btn {
@@ -125,6 +145,8 @@
   }
 
   /* Section : QuickList end */
+
+  /* Section : features start */
 
   .features {
     flex-direction: column;
@@ -145,6 +167,9 @@
     border-top-right-radius: 0;
     border-top-left-radius: 0;
   }
+
+  /* section features end */
+
   .facts .facts_data {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 4rem;
@@ -154,10 +179,14 @@
   }
 }
 
+/* Tablets */
+
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   .container {
     width: 90%;
   }
+  /* header start */
+
   header nav {
     flex-direction: column;
     height: 10rem;
@@ -165,9 +194,13 @@
     gap: 1.5rem;
   }
 
-  .hero{
+  .hero {
     flex-direction: column-reverse;
   }
+
+  /* header end */
+ 
+/* Section : features start */
   .features {
     flex-direction: column;
   }
@@ -187,6 +220,9 @@
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
+
+/* Section : features end */
+
   .facts .facts_data {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 4rem;
@@ -196,11 +232,9 @@
   }
 }
 
+/* Large Devices */
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .container {
     width: 90%;
   }
-}
-
-@media only screen and (min-width: 1200px) {
 }
