--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,12 @@ header nav .nav_right ul a:hover::before {
   background-color: var(--color-main);
   color: var(--color-white) !important;
   transform: scale(1.1);
+  /* -webkit-box-shadow: 0px 0px 6px 2px rgba(254, 142, 14, 1);
+  -moz-box-shadow: 0px 0px 6px 2px rgba(254, 142, 14, 1);
+  box-shadow: 0px 0px 6px 2px rgba(254, 142, 14, 1); */
+  -webkit-box-shadow: 0px 0px 6px -2px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 6px -2px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 6px -2px rgba(0, 0, 0, 1);
 }
 
 /* Facts Section End */
